--- a/input_test.html
+++ b/input_test.html
@@ -26,8 +26,8 @@
     <h1>Blink Edit Suppression Test Suite</h1>
 
     <section>
-        <h2>Text entry and Drag and Drop</h2>
-        <p>Try entering text or dragging the blue box into the input or textarea.</p>
+        <h2>Text entry, voice dictation, IME (eg: Pinyin), OSK and Drag and Drop</h2>
+        <p>Try any of the input methods shown above.</p>
         <div class="draggable" draggable="true" id="dragSource">DRAG THIS TEXT</div>
         <div class="grid">
             <div class="test-case">
