--- a/input_test.html
+++ b/input_test.html
@@ -60,7 +60,7 @@
     </section>
 
     <section>
-        <h2>Chrome Autofill (Address/Credit Card)</h2>
+        <h2>Autofill (Address/Credit Card)</h2>
         <form action="/nowhere" method="post">
             <div class="grid">
                 <div class="test-case">
@@ -120,7 +120,7 @@
     </section>
 
     <section>
-        <h2>Canvas</h2>
+        <h2>Canvas and Dynamic CE</h2>
         <div class="grid">
             <div class="test-case">
                 <label>Canvas Text (Synthetic):</label>
